improved cors config and fixed product placeholder image url